layout breaking fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -137,3 +137,11 @@ body {
   --breakpoint-xl: 90rem; /* 1440px */
   --breakpoint-2xl: 160rem; /* 2560px */
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
